Add issues icons to criteria example partial

--- a/source/leading-examples.html
+++ b/source/leading-examples.html
@@ -53,7 +53,7 @@ seo_image_path: #'/images/media/filename.jpg'
     {%assign currentOrder = currentCriteria[0].order%}
 
 
-    {% include example.html example=leadingExample criteriaName=example.criteria order=currentOrder%}
+    {% include example.html example=leadingExample criteriaName=example.criteria order=currentOrder exampleType="leading"%}
     <div class="row align-center">
       <div class="column large-10">
         <hr class="hr--long">
