Add index expand scripts

--- a/source/index.html
+++ b/source/index.html
@@ -24,7 +24,11 @@ seo_image_path: #'/images/media/filename.jpg'
         </div>
       </div>
       {% include buttons.html %}
-      <button class="read-more button">Read more</button>
+      <div class="row align-center">
+        <div class="column large-11">
+          <button class="read-more"></button>
+        </div>
+      </div>
     </div>
   </section>
 
