Match styles to mock ups

--- a/source/downloads.html
+++ b/source/downloads.html
@@ -9,7 +9,7 @@ seo_image_path: #'/images/media/filename.jpg'
   <section class="top-section">
     <div class="row align-center">
       <div class="column large-8 medium-8 small-12">
-        <h1 class="index-year">{{ downloadsPage.page_title }} Standard of Excellence</h1>
+        <h1>{{ downloadsPage.page_title }} Standard of Excellence</h1>
         <hr>
         <h2>{{downloadsPage.standard_title}}</h2>
       </div>
@@ -67,7 +67,7 @@ seo_image_path: #'/images/media/filename.jpg'
             <div class="spotlight-download-wrapper large-3 medium-4 small-8">
               <a class="spotlight-download-link" href="{{download.download_url}}">
                 <div class="spotlight-download button--download">
-                  
+
                   <div class="spotlight-download__title">
                     {{download.state_abbreviation}}
                   </div>
