--- a/source/index.html
+++ b/source/index.html
@@ -32,7 +32,7 @@ seo_image_path: #'/images/media/filename.jpg'
     </div>
   </section>
 
-  {% include table-two.html %}
+  {% include table.html %}
 
   <section>
     <div class="row align-center expanded footnote">
