--- a/source/sandbox.html
+++ b/source/sandbox.html
@@ -19,7 +19,7 @@ layout: default
       </div>
     </div>
   </section>
- {% include table-two.html %}
+ {% include table.html %}
   <section class="page-section">
     <div class="row align-center">
       <div class="column large-10">
