Accessibility edits adds landmarked sections labels img alt text and hidden screen reader labels

--- a/source/index.html
+++ b/source/index.html
@@ -23,10 +23,10 @@ seo_image_path: #'/images/media/filename.jpg'
           {{ page.short_description | markdownify }}
         </div>
       </div>
-      
+
       <div class="row align-center">
         <div class="column large-11 read-more-wrapper">
-          <button class="read-more"></button>
+          <button class="read-more" aria-label="Read More Toggle"></button>
         </div>
       </div>
     </div>
