Replace key panel with modal

--- a/source/index.html
+++ b/source/index.html
@@ -32,6 +32,8 @@ seo_image_path: #'/images/media/filename.jpg'
     </div>
   </section>
 
+  {% include key-modal.html %}
+
   {% include table.html %}
 
   <section>
