Add tabbing elements and focus styles

--- a/source/leading-examples.html
+++ b/source/leading-examples.html
@@ -23,7 +23,7 @@ seo_image_path: #'/images/media/filename.jpg'
       </div>
     </div>
     <div class="button-container button-container--align-left row">
-      <a class="button button--index" onclick="goBack()"><span>Back to<br>Standard</span></a>
+      <a tabindex="0" class="button button--index" onclick="goBack()"><span>Back to<br>Standard</span></a>
     </div>
   </section>
 
