--- a/source/index.html
+++ b/source/index.html
@@ -30,6 +30,8 @@ seo_image_path: #'/images/media/filename.jpg'
         </div>
       </div>
     </div>
+
+    {% include buttons_top.html %}
   </section>
 
   {% include key-modal.html %}
