--- a/source/downloads.html
+++ b/source/downloads.html
@@ -52,7 +52,7 @@ seo_image_path: #'/images/media/filename.jpg'
       </div>
     </div>
   </section>
-  <section class="page-section spotlights-section">
+  <section id="state-spotlights" class="page-section spotlights-section">
     <div class="row align-center">
       <div class="column large-10">
         <h2>{{downloadsPage.spotlights_title}}</h2>
