Edit index buttons

--- a/source/index.html
+++ b/source/index.html
@@ -22,6 +22,9 @@ seo_image_path: #'/images/media/filename.jpg'
         <div class="column large-11 markdown">
           {{ page.short_description | markdownify }}
         </div>
+        <div class="column large-11">
+          {% include buttons_top.html %}
+        </div>
       </div>
 
       <div class="row align-center">
