Add state spotlights

--- a/source/downloads.html
+++ b/source/downloads.html
@@ -68,7 +68,7 @@ seo_image_path: #'/images/media/filename.jpg'
         <div class="row align-center">
           {% for download in downloadsPage.spotlights_files%}
           <div class="spotlight-download-wrapper large-3 medium-4 small-6">
-            <a class="spotlight-download-link" href="{{download.download_url}}">
+            <a class="spotlight-download-link" href="{{download.download_url}}" target="_blank">
               <div class="spotlight-download button--download">
 
                 <div class="spotlight-download__title">
