Add responsive classes to index expandable section

--- a/source/index.html
+++ b/source/index.html
@@ -19,10 +19,10 @@ seo_image_path: #'/images/media/filename.jpg'
 
     <div class="expandable">
       <div class="row align-center">
-        <div class="column large-11 markdown">
+        <div class="column large-11 medium-12 small-12 markdown">
           {{ page.short_description | markdownify }}
         </div>
-        <div class="column large-11">
+        <div class="column large-11 medium-12 small-12">
           {% include buttons_top.html %}
         </div>
       </div>
